<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="name_app">demo</string>
    <string name="area_china">+86</string>
    <string name="loading_net">请求中...</string>
    <string name="net_break">网络已断开</string>
    <string name="refresh">刷新</string>
    <string name="more">更多</string>
    <string name="back">返回</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="save">保存</string>
    <string name="editor">编辑</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="tips">提示：</string>
    <string name="login_name">登录账号</string>
    <string name="login_name_null">请输手机号</string>
    <string name="login_name_min_six">登录账号不能小于六位</string>
    <string name="login_name_phone_error">请输入正确的账号格式</string>
    <string name="login_pass">请输入登录密码</string>
    <string name="login_pass_mix_six">登录密码不能小于六位</string>
    <string name="login_phone">输入登录手机号</string>
    <string name="login_phone_null">请输入手机号码</string>
    <string name="login_account_null">请输入登录账号</string>
    <string name="login_account_min_six">登录账号不能小于六位</string>
    <string name="staff_phone_eleven">手机号码必须为11位</string>
    <string name="staff_phone_eleven_wrong">手机号格式不正确</string>
    <string name="staff_phone_wrong">账号格式不正确</string>
    <string name="staff_phone_six">手机号码必须为6~11位</string>
    <string name="login_code">验证码</string>
    <string name="login_code_hint">输入短信验证码</string>
    <string name="login_code_null">请输入手机验证码</string>
    <string name="login_code_min_six">手机验证码必须为6位</string>
    <string name="login_new_pass">输入新的登录密码</string>
    <string name="login_new_pass_null">请输入新密码</string>
    <string name="login_new_pass_min_six">新密码不能小于六位</string>
    <string name="login_new_pass_again">再次输入新的登录密码</string>
    <string name="login_new_pass_again_null">请输入重复密码</string>
    <string name="login_new_pass_again_min_six">重复密码不能小于六位</string>
    <string name="login_new_pass_again_equals">两次输入的密码不相同</string>
    <string name="register_pay_pwd_null">请输入交易密码</string>
    <string name="register_pay_pwd_min_six">交易密码不能小于六位</string>
    <string name="register_pay_and_pwd_equals">登录密码和交易密码不能相同</string>
    <string name="register_pay_pwd_again_null">请输入重复交易密码</string>
    <string name="register_pay_pwd_again_equals">两次输入的交易密码不相同</string>
    <string name="old_login_pwd_null">请输入原登录密码</string>
    <string name="old_login_pwd_min_six">原登录密码不能小于6位</string>
    <string name="old_login_pwd_new_equals">新登录密码不能与原登录密码相同</string>
    <string name="forgot">忘记密码</string>
    <string name="forgot_tittle">找回密码</string>
    <string name="login_modify_tittle">修改初始密码</string>
    <string name="forgot_submit_success">修改密码成功,请重新登录</string>
    <string name="modify_pass_success">修改密码成功</string>
    <string name="check_phone">手机验证</string>
    <string name="verification_code">验证码：</string>
    <string name="verification_code_get">获取验证码</string>
    <string name="verification_code_get_success">获取验证码成功</string>
    <string name="verification_code_get_sub">已发送(<xliff:g id="num">%1$1d</xliff:g>s)</string>
    <string name="login_pay_pass">支付密码</string>
    <string name="login_pay_pass_again">重复支付密码</string>
    <string name="login_invitation_code">推荐人邀请码</string>
    <string name="login_message">点击注册即表示接受</string>
    <string name="login_agreement">《用户注册协议》</string>
    <string name="register_pass">登录密码</string>
    <string name="register_pass_again">重复登录密码</string>
    <string name="click_exit">再按一次退出程序</string>
    <string name="login_check">还未登录,请登录</string>
    <string name="update_later">稍后更新</string>
    <string name="update_now">立即更新</string>
    <string name="text_digits">qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM
    </string>
    <string name="text_digits_1">qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM-_
    </string>
    <string name="text_digits_2">1234567890</string>
    <string name="text_digits_3">
        qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM-_@.
    </string>
    <string name="sorry">Sorry.................</string>
    <string name="details">详情</string>
    <string name="submit">提\t交</string>
    <string name="submit1">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="add_conform">确认添加</string>
    <string name="manage_user_info">个人信息</string>
    <string name="net_connect_error">网络连接失败，请检查网络后重试</string>
    <string name="net_connect_error_tip1">网络断开连接</string>
    <string name="net_connect_error_tip2">点击按钮尝试重新连接～</string>
    <string name="net_connect_error_btn">点击重试</string>
    <string name="login_tips">登录失效，请登录</string>
    <string name="last_btn">上一步</string>
    <string name="next_btn">下一步</string>
    <string name="mine_old_version">当前版本号：</string>
    <string name="mine_new_version">最新版本号：</string>
    <string name="mine_update_describe">更新说明</string>
    <string name="input_new_account">请输入账号</string>

    <string name="login_account_hint">手机号码</string>
    <string name="login_pwd_hint">登录密码</string>
    <string name="login_modify_pass">修改初始密码</string>
    <string name="login_modify_pass_new">输入新的登录密码</string>
    <string name="login_modify_pass_new_again">再次输入新的登录密码</string>
    <string name="login_pass_set">设置密码</string>

    <string name="forget_pass_hint">请输入您的新密码，6-16位数字或字母</string>
    <string name="forget_pass_hint_again">请重复输入密码</string>

    <string name="main_home">首页</string>
    <string name="main_update">版本更新</string>
    <string name="main_update_now">立即更新</string>
    <string name="main_more">更多</string>
    <string name="version_info">版本信息</string>
    <string name="check_update">检查更新</string>


    <string name="mine_phone">手机号：</string>
    <string name="mine_name">姓名：</string>
    <string name="mine_modify_phone">修改绑定手机号</string>
    <string name="mine_modify_pass">修改登录密码</string>
    <string name="mine_exit">退出登录</string>
    <string name="mine_exit_tip">确认退出登录?</string>

    <string name="modify_phone_new">输入新的手机号</string>
    <string name="modify_phone_pass">输入登录密码</string>
    <string name="modify_phone_success">修改成功,请重新登录</string>

    <string name="modify_pass_old">输入原登录密码</string>
    <string name="modify_pass_new">输入新的登录密码</string>
    <string name="modify_pass_new_again">再次输入新的登录密码</string>


    <string name="more_check_version">检查版本</string>

    <string name="request_storage_premission_notice">
        为了保证您正常地使用APP,当我们获取您的存储空间权限时，请点击允许，拒绝后APP将无法正常运行。
    </string>
    <string name="exit">退出</string>


    <string name="main_mine">我的</string>

    <string name="mine">我的</string>
    <string name="personal_message">个人信息</string>
    <string name="mine_appeal">我的申诉</string>
    <string name="check_version">版本检测</string>
    <string name="modify_psd">修改密码</string>
    <string name="modify_phone">修改手机号</string>
    <string name="exit_login">退出登录</string>
    <string name="modify_password">修改密码</string>
    <string name="new_password">新登录密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="mine_bind_phone">绑定手机号</string>
    <string name="select_phone_area">选择区号</string>
    <string name="phone">手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="mine_code">验证码</string>
    <string name="phone_hint">您的手机号</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="old_password">原密码</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="input_again_password">请输入重复密码</string>
    <string name="mine_check_version">版本检测</string>
    <string name="update_descent">更新说明</string>
    <string name="update_msg">1. 更新说明更新说明更新说明更新说明\n2. 更新说明更新说明更新说明更新说明\n3. 更新说明更新说明更新说明更新说明\n4. 更新说明更新说明更新说明更新说明</string>
    <string name="mine_old_password_hint">请输入原密码</string>
    <string name="mine_new_password">新密码</string>
    <string name="mine_new_password_hint">请输入新密码</string>
    <string name="mine_again_password">重复密码</string>
    <string name="mine_again_password_hint">请重新输入密码</string>
    <string name="register_pass_equals_again">两次输入的密码不相同</string>
    <string name="mine_app_update">应用更新</string>
    <string name="modify_account">修改账号</string>


</resources>
