<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/common_header" />

    <RelativeLayout
        android:id="@+id/area_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y50">

        <TextView
            style="@style/text_gray_style"
            android:layout_margin="@dimen/x14"
            android:text="@string/select_phone_area" />

        <TextView
            android:id="@+id/select_tv"
            style="@style/text_more_gray_style"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/x14"
            android:text="@string/select_phone_area" />
    </RelativeLayout>
    <!--手机号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y50">

        <TextView
            style="@style/text_gray_style"
            android:layout_gravity="center"
            android:layout_margin="@dimen/x14"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phone_et"
            style="@style/edit_text_style1"
            android:layout_gravity="center"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:maxLength="11" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y50"
        android:layout_marginLeft="@dimen/x14"
        android:layout_marginRight="@dimen/x14"
        android:background="@drawable/shape_edit_bg">

        <TextView
            android:id="@+id/code_tv"
            style="@style/text_gray_style"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/mine_code" />

        <EditText
            android:id="@+id/register_code_et"
            style="@style/edit_text_style"
            android:layout_height="@dimen/y40"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x10"
            android:layout_toRightOf="@id/code_tv"
            android:background="@null"
            android:digits="@string/text_digits_2"
            android:hint="@string/verification_code_hint"
            android:inputType="number"
            android:maxLength="6"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/phone_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/verification_code_get"
            android:textColor="@color/color_green_1"
            android:textSize="@dimen/text_size_16" />
    </RelativeLayout>

    <!--登录密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y50">

        <TextView
            style="@style/text_gray_style"
            android:layout_gravity="center"
            android:layout_margin="@dimen/x14"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/again_password_et"
            style="@style/edit_text_style1"
            android:layout_gravity="center"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:maxLength="16" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        style="@style/btn_green_style"
        android:layout_width="@dimen/x140"
        android:layout_height="@dimen/y40"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/submit" />
</LinearLayout>