<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".module.login.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x40"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y100"
            android:text="@string/name_app"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y36">

            <TextView
                android:id="@+id/login_country_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="中国"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/login_area_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x29"
                android:layout_toRightOf="@id/login_country_tv"
                android:drawableRight="@mipmap/ic_area_select"
                android:drawablePadding="@dimen/x6"
                android:text="+86"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />
        </RelativeLayout>

        <com.ybkj.demo.ui.view.ClearEditText
            android:id="@+id/login_account_et"
            style="@style/edit_text_style"
            android:layout_marginTop="@dimen/y29"
            android:background="@null"
            android:digits="@string/text_digits_2"
            android:hint="@string/login_account_hint"
            android:inputType="number"
            android:maxLength="11"
            android:textColorHint="@color/color_login_hint" />

        <View
            style="@style/line_h"
            android:layout_marginTop="@dimen/y5"
            android:background="@color/color_login_line" />

        <EditText
            android:id="@+id/login_pwd_et"
            style="@style/edit_text_style"
            android:layout_marginTop="@dimen/y30"
            android:background="@null"
            android:digits="@string/text_digits"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColorHint="@color/color_login_hint" />

        <View
            style="@style/line_h"
            android:layout_marginTop="@dimen/y5"
            android:background="@color/color_login_line" />


        <Button
            android:id="@+id/login_btn"
            style="@style/btn_normal_style"
            android:layout_width="@dimen/x140"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y112"
            android:background="@drawable/shape_button_bg"
            android:text="@string/login" />

        <TextView
            android:id="@+id/login_forgot_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y16"
            android:text="@string/forgot"
            android:textColor="@color/color_gray_1"
            android:textSize="@dimen/text_size_14" />

        <com.ybkj.demo.ui.view.MyTextView
            android:id="@+id/myText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/x10"
            android:paddingTop="@dimen/y8"
            android:paddingRight="@dimen/x10"
            android:paddingBottom="@dimen/y8"
            android:text="asdasdasd"
            app:background_color="@color/color_gray_2"
            app:line_color="@color/color_red_1"
            app:line_height="@dimen/y2" />

    </LinearLayout>


    <com.ybkj.demo.ui.view.FoldLineView
        android:layout_width="@dimen/x300"
        android:layout_height="@dimen/y400"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/x10"
        android:visibility="gone" />
</FrameLayout>
